<resources>
    <string name="app_name">CSGO Map Veto</string>
    <string name="CSGO_MAP_VETO">CSGO MAP VETO</string>
    <string name="NewVeto">New Veto</string>
    <string name="NewTeam">New Team</string>
    <string name="OldVeto">Old Vetos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_team">Create team:</string>
    <string name="team_name">Team name</string>
    <string name="add_team">Add team</string>
    <string name="starts_veto">Starts veto:</string>
    <string name="start_the_veto">Start the veto</string>
    <string name="vs">vs.</string>
    <string name="select_teams">Select teams:</string>
    <string name="veto_settings">Veto Settings</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="team1_vs_team2">Team1 vs. Team2</string>
    <string name="de_vertigo">DE_VERTIGO</string>
    <string name="de_inferno">DE_INFERNO</string>
    <string name="de_nuke">DE_NUKE</string>
    <string name="de_overpass">DE_OVERPASS</string>
    <string name="de_train">DE_TRAIN</string>
    <string name="de_mirage">DE_MIRAGE</string>
    <string name="de_dust2">DE_DUST2</string>
    <string name="result">Result</string>

    <string-array name="TeamToStart">
        <item>Team1</item>
        <item>Team2</item>
    </string-array>
</resources>
