<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/TitleOfApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="monospace"
            android:text="@string/CSGO_MAP_VETO"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/NewVetoButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/NewVeto"
            android:textSize="18sp" />

        <Button
            android:id="@+id/NewTeamButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/NewTeam"
            android:textSize="18sp" />

        <Button
            android:id="@+id/OldVetoButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/OldVeto"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>