<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TitleOfApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="monospace"
        android:text="@string/CSGO_MAP_VETO"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NewVetoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NewVetoButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/NewVeto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/NewTeamButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleOfApp" />

    <Button
        android:id="@+id/NewTeamButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/NewTeam"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewVetoButton" />

    <Button
        android:id="@+id/OldVetoButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/OldVeto"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewTeamButton" />

</androidx.constraintlayout.widget.ConstraintLayout>