<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTeamFragment"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/create_team" />

            <EditText
                android:id="@+id/editText_Team1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/team_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/addTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_team"
            android:textColor="@color/buttonTextColor"/>


    </LinearLayout>
</FrameLayout>